-- ============================================================
-- SIGA - schema.sql
-- Création de la structure PostgreSQL
-- ============================================================

BEGIN;

CREATE TABLE departement (
    id_departement INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom VARCHAR(255) NOT NULL,
    description TEXT
);

CREATE TABLE service (
    id_service INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_departement INTEGER NOT NULL REFERENCES departement(id_departement),
    nom VARCHAR(255) NOT NULL,
    description TEXT,
    actif BOOLEAN DEFAULT TRUE,
    date_creation TIMESTAMP,
    date_desactivation TIMESTAMP
);

CREATE TABLE poste (
    id_poste INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    libelle VARCHAR(255) NOT NULL,
    type_contrat VARCHAR(100),
    categorie VARCHAR(100) NOT NULL,
    effectif_prevu INTEGER NOT NULL,
    effectif_reel INTEGER,
    actif BOOLEAN DEFAULT TRUE,
    date_creation TIMESTAMP,
    date_desactivation TIMESTAMP
);

CREATE TABLE priorite (
    id_priorite INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(100) UNIQUE,
    libelle VARCHAR(255) NOT NULL,
    description TEXT,
    actif BOOLEAN DEFAULT TRUE,
    date_desactivation TIMESTAMP,
    date_creation TIMESTAMP
);

CREATE TABLE type_activite (
    id_type_activite INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    libelle VARCHAR(255) NOT NULL,
    actif BOOLEAN DEFAULT TRUE,
    date_desactivation TIMESTAMP,
    date_creation TIMESTAMP
);

CREATE TABLE statut (
    id_statut INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    libelle VARCHAR(255) NOT NULL,
    code VARCHAR(100) UNIQUE,
    ordre INTEGER,
    description TEXT,
    actif BOOLEAN DEFAULT TRUE,
    date_desactivation TIMESTAMP,
    date_creation TIMESTAMP
);

CREATE TABLE type_token (
    id_type_token INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(100) UNIQUE,
    libelle VARCHAR(255) NOT NULL,
    description TEXT
);

CREATE TABLE permission (
    id_permission INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(100) UNIQUE,
    nom VARCHAR(255) NOT NULL,
    description TEXT,
    ressource VARCHAR(255),
    action VARCHAR(100),
    actif BOOLEAN DEFAULT TRUE,
    date_desactivation TIMESTAMP
);

CREATE TABLE role (
    id_role INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(50) UNIQUE,
    libelle VARCHAR(100) NOT NULL,
    description TEXT,
    actif BOOLEAN DEFAULT TRUE,
    date_creation TIMESTAMP,
    date_desactivation TIMESTAMP
);

CREATE TABLE operation_pta (
    id_operation_pta INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(100) UNIQUE,
    libelle VARCHAR(255) NOT NULL,
    description TEXT,
    annee INTEGER,
    date_creation TIMESTAMP
);

CREATE TABLE site (
    id_site INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(100) UNIQUE,
    nom VARCHAR(255) NOT NULL,
    latitude NUMERIC,
    longitude NUMERIC,
    actif BOOLEAN DEFAULT TRUE,
    date_desactivation TIMESTAMP,
    date_creation TIMESTAMP
);

CREATE TABLE decision_validation (
    id_decision INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(100) UNIQUE,
    libelle VARCHAR(255) NOT NULL,
    description TEXT,
    actif BOOLEAN DEFAULT TRUE,
    date_creation TIMESTAMP,
    date_desactivation TIMESTAMP
);

CREATE TABLE utilisateur (
    id_utilisateur INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_service INTEGER NOT NULL REFERENCES service(id_service),
    id_poste INTEGER NOT NULL REFERENCES poste(id_poste),
    nom VARCHAR(255) NOT NULL,
    prenom VARCHAR(255) NOT NULL,
    email VARCHAR(255) UNIQUE NOT NULL,
    telephone VARCHAR(50),
    mot_de_passe VARCHAR(255) NOT NULL,
    actif BOOLEAN DEFAULT TRUE,
    date_creation TIMESTAMP,
    date_desactivation TIMESTAMP,
    date_derniere_connexion TIMESTAMP
);

CREATE TABLE token_auth (
    id_token INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_utilisateur INTEGER REFERENCES utilisateur(id_utilisateur),
    id_type_token INTEGER REFERENCES type_token(id_type_token),
    token VARCHAR(500) UNIQUE,
    date_creation TIMESTAMP,
    date_expiration TIMESTAMP,
    date_utilisation TIMESTAMP
);

CREATE TABLE poste_permission (
    id_poste INTEGER REFERENCES poste(id_poste),
    id_permission INTEGER REFERENCES permission(id_permission),
    PRIMARY KEY (id_poste, id_permission)
);

CREATE TABLE "procedure" (
    id_procedure INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(100) UNIQUE,
    libelle VARCHAR(255) NOT NULL,
    description TEXT,
    actif BOOLEAN DEFAULT TRUE,
    date_creation TIMESTAMP,
    date_desactivation TIMESTAMP
);

CREATE TABLE etape_validation (
    id_etape_validation INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_procedure INTEGER REFERENCES "procedure"(id_procedure),
    libelle VARCHAR(255) NOT NULL,
    description TEXT,
    niveau INTEGER,
    id_poste INTEGER REFERENCES poste(id_poste),
    obligatoire BOOLEAN DEFAULT TRUE,
    actif BOOLEAN DEFAULT TRUE,
    date_creation TIMESTAMP,
    date_desactivation TIMESTAMP
);

CREATE TABLE activite (
    id_activite INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_service INTEGER REFERENCES service(id_service),
    id_type_activite INTEGER NOT NULL REFERENCES type_activite(id_type_activite),
    id_priorite INTEGER REFERENCES priorite(id_priorite),
    id_site INTEGER REFERENCES site(id_site),
    id_operation_pta INTEGER REFERENCES operation_pta(id_operation_pta),
    id_procedure INTEGER REFERENCES "procedure"(id_procedure),
    code VARCHAR(100) UNIQUE,
    libelle VARCHAR(255) NOT NULL,
    date_debut_prevue TIMESTAMP,
    date_fin_prevue TIMESTAMP,
    date_debut_reelle TIMESTAMP,
    date_fin_reelle TIMESTAMP,
    date_creation TIMESTAMP
);

CREATE TABLE activite_utilisateur (
    id_activite_utilisateur INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_activite INTEGER REFERENCES activite(id_activite),
    id_utilisateur INTEGER REFERENCES utilisateur(id_utilisateur),
    id_role INTEGER REFERENCES role(id_role),
    date_affectation TIMESTAMP,
    date_desaffectation TIMESTAMP
);

CREATE TABLE historique_activite (
    id_historique_activite INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_activite INTEGER REFERENCES activite(id_activite),
    id_statut INTEGER REFERENCES statut(id_statut),
    id_utilisateur INTEGER REFERENCES utilisateur(id_utilisateur),
    date_debut TIMESTAMP,
    date_fin TIMESTAMP,
    commentaire TEXT
);

CREATE TABLE ressource (
    id_ressource INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_activite INTEGER REFERENCES activite(id_activite),
    designation VARCHAR(255) NOT NULL,
    type_ressource VARCHAR(100) NOT NULL,
    quantite INTEGER,
    cout NUMERIC
);

CREATE TABLE indicateur (
    id_indicateur INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    type_indicateur VARCHAR(100) NOT NULL,
    details TEXT,
    libelle VARCHAR(255) NOT NULL,
    code_hopex VARCHAR(100) UNIQUE NOT NULL,
    indicateur_hopex VARCHAR(255) NOT NULL,
    objectifs TEXT,
    methode_determination TEXT,
    frequence_verification VARCHAR(100),
    frequence_aggregation VARCHAR(100),
    seuil_min NUMERIC,
    seuil_max NUMERIC,
    unite VARCHAR(100),
    commentaire TEXT,
    date_creation TIMESTAMP
);

CREATE TABLE valeur_indicateur (
    id_valeur_indicateur INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_indicateur INTEGER REFERENCES indicateur(id_indicateur),
    periode_debut TIMESTAMP,
    periode_fin TIMESTAMP,
    valeur NUMERIC,
    commentaire TEXT,
    date_saisie TIMESTAMP
);

CREATE TABLE validation_activite (
    id_validation INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_activite INTEGER REFERENCES activite(id_activite),
    id_etape_validation INTEGER REFERENCES etape_validation(id_etape_validation),
    id_utilisateur_demandeur INTEGER REFERENCES utilisateur(id_utilisateur),
    id_utilisateur_validateur INTEGER REFERENCES utilisateur(id_utilisateur),
    id_decision INTEGER REFERENCES decision_validation(id_decision),
    date_demande TIMESTAMP,
    date_decision TIMESTAMP,
    commentaire TEXT
);

CREATE TABLE notification (
    id_notification INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_utilisateur INTEGER REFERENCES utilisateur(id_utilisateur),
    id_priorite INTEGER REFERENCES priorite(id_priorite),
    titre VARCHAR(255),
    message TEXT,
    lu BOOLEAN DEFAULT FALSE,
    date_creation TIMESTAMP,
    date_lecture TIMESTAMP
);

CREATE TABLE plan_action (
    id_plan_action BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(50) UNIQUE NOT NULL,
    intitule VARCHAR(255) NOT NULL,
    commentaire TEXT,
    date_creation TIMESTAMP NOT NULL
);

CREATE TABLE origine (
    id_origine BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(50) UNIQUE NOT NULL,
    type VARCHAR(30) NOT NULL,
    reference VARCHAR(50) NOT NULL,
    intitule VARCHAR(255) NOT NULL,
    description TEXT
);

CREATE TABLE plan_action_origine (
    id_plan_action BIGINT NOT NULL REFERENCES plan_action(id_plan_action),
    id_origine BIGINT NOT NULL REFERENCES origine(id_origine),
    est_principale BOOLEAN NOT NULL DEFAULT FALSE,
    PRIMARY KEY (id_plan_action, id_origine)
);

CREATE TABLE plan_action_utilisateur (
    id_plan_action BIGINT NOT NULL REFERENCES plan_action(id_plan_action),
    id_utilisateur INTEGER NOT NULL REFERENCES utilisateur(id_utilisateur),
    id_role INTEGER NOT NULL REFERENCES role(id_role),
    PRIMARY KEY (id_plan_action, id_utilisateur, id_role)
);

COMMIT;
